spacing issues fixed

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -76,7 +76,6 @@ img {
 }
 .sitetitle {
   padding: 20px;
-  color: #fff
 }
 .title{
   padding: 20px;
